<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ph.com.regalado.gilmichael.collapsingtoolbarlayout.ScrollingActivity">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/bg_cancel_icon"
        android:orderInCategory="200"
        android:title="info"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>