<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpNews"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/tlIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:dotsColor="@color/yellow"
        app:dotsStrokeColor="@color/yellow"
        app:dotsCornerRadius="8dp"
        app:dotsSize="8dp"
        app:dotsSpacing="2dp"
        app:dotsStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>